--- a/index.css
+++ b/index.css
@@ -1,43 +1,71 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Unica One', cursive;
     background-color: #173F5F;
     color: #6da8d8;
-    font-family: 'Unica One', cursive;
 }
 
 body {
-    display: flex;
     width: 100vw;
     height: 100vh;
-}
-
-.wrapper {
     display: flex;
-    margin: auto;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
-#counter {
-    display: flex;
-    font-size: 4rem;
-    text-shadow: 3px 3px #396488;
+footer {
+    position: fixed;
+    bottom: 0;
+    padding: 1rem;
+}
+ 
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
-#counter > div {
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+input {
+    background-color: inherit;
+    color: inherit;
+    border: 2px solid #6da8d8;
+    outline: none;
+    font-size: 2rem;
+    font-family: inherit;
+    width: 45px;
+    text-align: center;
+    padding: 0.75rem 0.5rem;
+    border-radius: 1rem;
     margin: 0.5rem;
 }
 
+#input-year {
+    width: 90px;
+}
+
 button {
-    border: none;
-    background-color: transparent;
-    color: #6da8d8;
-    margin: 1.5rem 1rem 1rem 1rem;
-    padding: 1rem;
-    border-radius: 1rem;
-    transition: background-color ease 0.2s, color ease 0.2s;
     outline: none;
+    background-color: transparent;
+    color: inherit;
+    border: none;
+    transition: background-color ease 0.2s, color ease 0.2s;
+    border-radius: 1rem;
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
+    text-transform: uppercase;
+    width: 100%;
+    margin-bottom: 1rem;
 }
 
 button:hover {
@@ -45,7 +73,24 @@ button:hover {
     color: #173F5F;
 }
 
-#date {
-    font-size: 1.5rem;
+.flex {
+    display: flex;
+}
+
+.counter-input-group {
     margin-bottom: 1rem;
+}
+
+.hide {
+    display: none;
+}
+
+.counter-control {
+    font-size: 4rem;
+    padding: .75rem;
+    text-shadow: 3px 3px #396488;
+}
+
+#counter-targetdate {
+    font-size: 2rem;
 }
